--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,4 +1,4 @@
-header{
+header {
     width: 100%;
     display: flex;
     align-items: center;
@@ -9,42 +9,137 @@ header{
     top: 20px;
     left: 0;
     z-index: 100;
-    nav{
+
+    nav {
         width: 95%;
         display: flex;
         align-items: center;
         // background: #fff;
         padding: 10px;
         justify-content: space-between;
-        transition: all 800ms;
-        .header-logo-container{
-            width: 50px;
-            height: 50px;
+        // transition: all 800ms;
+
+        .header-logo-container {
+            width: 60px;
+            height: 60px;
             border-radius: 10px;
             display: flex;
             align-items: center;
             justify-content: center;
             background: #000;
             color: #fff;
-            margin-right: 30px;
+            margin-right: 10px;
+            transition: all 800ms;
         }
-        .header-links{
+
+        .header-links {
             width: fit-content;
+            height: 100%;
             display: flex;
             align-items: center;
             justify-content: center;
-            .header-link-list{
-                width: 600px;
+            transition: all 400ms;
+
+            .header-link-list {
+                width: 750px;
+                height: 100%;
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
-                li{
+                transition: all 400ms;
+
+                .header-link-container {
+                    padding: 0px 40px;
+                    width: 450px;
+                    height: 60px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                    margin-right: 10px;
+                    transition: all 400ms;
+
+                    li {
+                        list-style-type: none;
+                        position: relative;
+                        cursor: pointer;
+                        font-size: 17px;
+                        letter-spacing: 0.07cap;
+
+                        &:not(:nth-child(5)):after {
+                            content: "";
+                            width: 4px;
+                            height: 4px;
+                            border-radius: 50%;
+                            background: #b3b3b3;
+                            position: absolute;
+                            bottom: -10px;
+                            left: 50%;
+                            margin-left: -20px;
+                            opacity: 0;
+                            transition: all 400ms;
+                        }
+
+                        &:hover:after {
+                            margin-left: 0;
+                            opacity: 1;
+                        }
+
+                        &:last-child {
+                            div {
+                                display: flex;
+                                flex-direction: column;
+                                align-items: center;
+                                // justify-content: center;
+                                // display: none;
+                                height: 30px;
+                                overflow: hidden;
+                                transition: all 400ms;
+                                background: #000;
+                                padding: 10px 15px;
+                                border-radius: 10px;
+                                height: 50px;
+
+                                &:hover {
+                                    p:first-child {
+                                        margin-top: -53px;
+                                    }
+
+                                    p:last-child {
+                                        margin-top: 5px;
+                                    }
+                                }
+
+                                p:first-child {
+                                    margin-top: 2px;
+                                    margin-bottom: 20px;
+                                }
+
+                                p {
+                                    transition: all 400ms;
+                                    font-size: 14px;
+                                    color: #fff;
+                                    margin-top: 0;
+                                    display: flex;
+                                    align-items: center;
+                                    justify-content: space-between;
+                                }
+
+                                p:last-child {
+                                    margin-top: 20px;
+                                }
+                            }
+                        }
+                    }
+                }
+
+                li {
                     list-style-type: none;
                     position: relative;
                     cursor: pointer;
                     font-size: 17px;
                     letter-spacing: 0.07cap;
-                    &:not(:nth-child(5)):after{
+
+                    &:not(:nth-child(5)):after {
                         content: "";
                         width: 4px;
                         height: 4px;
@@ -57,12 +152,14 @@ header{
                         opacity: 0;
                         transition: all 400ms;
                     }
-                    &:not(:last-child):hover:after{
+
+                    &:not(:last-child):hover:after {
                         margin-left: 0;
                         opacity: 1;
                     }
-                    &:last-child{
-                        div{
+
+                    &:last-child {
+                        div {
                             display: flex;
                             flex-direction: column;
                             align-items: center;
@@ -75,19 +172,24 @@ header{
                             padding: 10px 15px;
                             border-radius: 10px;
                             height: 50px;
-                            &:hover{
-                                p:first-child{
+                            margin-left: 10px;
+
+                            &:hover {
+                                p:first-child {
                                     margin-top: -53px;
                                 }
-                                p:last-child{
+
+                                p:last-child {
                                     margin-top: 5px;
                                 }
                             }
-                            p:first-child{
+
+                            p:first-child {
                                 margin-top: 2px;
                                 margin-bottom: 20px;
                             }
-                            p{
+
+                            p {
                                 transition: all 400ms;
                                 font-size: 14px;
                                 color: #fff;
@@ -96,7 +198,8 @@ header{
                                 align-items: center;
                                 justify-content: space-between;
                             }
-                            p:last-child{
+
+                            p:last-child {
                                 margin-top: 20px;
                             }
                         }
